examples/test/testpolicy18174.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18174
  namespace: namespace94
spec:
  podSelector:
    matchLabels:
      key11: value16
      key37: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value2
      podSelector:
        matchLabels:
          key48: value35
          key11: value45
